# json2toml

./: .editorconfig  Cargo.toml  LICENSE  README.md  file.json  file.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: main.yml
.notgithub/workflows/: main.yml  release.yml
src/: main.rs
test/: simple.yml
