[package]
  name    = "json2toml"
  version = "0.1.2"

  authors      = ["voidei"]
  categories   = ["Command line utilities"]
  description  = "A simple CLI tool to convert json files into toml format."
  edition      = "2021"
  license      = "MIT"
  readme       = "README.md"
  repository   = "https://github.com/voidei/json2toml"
  rust-version = "1.77"


[dependencies]
  anyhow     = "1.0.68"
  clap       = "4.0.32"
  serde_json = "1.0.91"
  toml       = "0.5.10"
